# rust---

./: Cargo.toml  README.md  array_index_test.cn  array_length_test.cn  compile_test.bat  compile_test.c  compile_test.cn  compile_test_fix.bat  complete_array_test.cn  comprehensive_array_test.cn  debug_test.cn  gcc_verbose.txt  simple_array_test.cn  simple_chinese_test.c  simple_test.c  temp_output.c  test.cn  test_ansi.c  test_array.cn  test_basic.cn  test_basic_no_comment.cn  test_concat.cn  test_escape_chars.cn  test_fix.c  test_fix.cn  test_fix_simple.c  test_func.cn  test_if.cn  test_logical_operators.cn  更新日记.txt  编译器说明.md
src/: ast.rs  code_generator.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
示例/: test_param_scope.cn  test_recursion.cn  test_string.cn  test_variable_debug.cn  示例.cn
