[package]
name = "chinese-programming-lang"
version = "0.1.0"
edition = "2021"
authors = ["Chinese Programming Language"]
description = "一个基于Rust的中文编程语言 作者：浪漫之夏 群：624826263"

[dependencies]
regex = "1.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "cnlang"
path = "src/main.rs"